--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <link rel="manifest" href="/manifest.json" />
     <title>HodlInfo</title>
     <link
-      href="/css/2.320202e0.chunk.css"
+      href="/src/static/css/2.320202e0.chunk.css"
       type="text/css"
       rel="stylesheet"
     />
     <link
-      href="/css/main.a829415c.chunk.css"
+      href="/src/static/css/main.a829415c.chunk.css"
       type="text/css"
       rel="stylesheet"
     />
@@ -405,7 +405,7 @@
         a();
       })([]);
     </script>
-    <script src="/js/main.js" type="text/JavaScript" ></script>
+    <script src="/src/static/js/main.js" type="text/JavaScript" ></script>
   </body>
   <script>
     window.addEventListener("load", () => {
