--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="shortcut icon" href="/media/favicon.ico" />
+    <link rel="shortcut icon" href="/src/static/media/favicon.ico" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -47,7 +47,7 @@
                     class="padding-none text-center-xs col-12 col-sm-12 col-md-11 col-lg-11"
                   >
                     <img
-                      src="/media/HODLINFO.8f78fc06.png"
+                      src="/src/static/media/HODLINFO.8f78fc06.png"
                       class="fiat-logo"
                       style="padding: 10px"
                     />
