--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
                     </svg>
                   </div>
-                  <a class="color-white" href="/connect/telegram">
+                  <a class="color-white" href="#">
                     <div
                       class="d-flex telegram-logo-text header-telegram-button btn align-items-center pointer color-white"
                     >
